<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.medlias.TeamBoardActivity">

    <TextView
        style="@style/h1"
        android:text="@string/board_team_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/board_team_list"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <TextView
        style="@style/h3"
        android:id="@+id/board_round"
        android:text="@string/board_round"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/h3"
        android:id="@+id/board_next_team"
        android:text="@string/board_next_team"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/BtnStyle"
        android:id="@+id/board_play_round"
        android:text="@string/board_next_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
